fix: force header alignment and update version

--- a/style.css
+++ b/style.css
@@ -1209,7 +1209,8 @@ input:checked+.slider:before {
 
 @media (max-width: 576px) {
     header .container {
-        padding: 0 10px;
+        width: 100%;
+        padding: 0 15px;
     }
 
     header {
